--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,10 @@
 VITE_BACKEND_URL=your_backend_url
 VITE_ZEGO_APP_ID=your_zego_app_id
 VITE_ZEGO_SERVER_SECRET=your_zego_server_secret
+VITE_FIREBASE_API_KEY=your_firebase_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_project_auth_domain_here
+VITE_FIREBASE_PROJECT_ID=your_project_id_here
+VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
+VITE_FIREBASE_APP_ID=your_app_id_here
+VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id_here
